--- a/tictac.html
+++ b/tictac.html
@@ -9,22 +9,22 @@
 </head>
 
 <body>
-    <div class="messagesection" id="messagesection">Player 1 turn</div>
+
     <div class="gameboard">
         <div class="row">
-            <div class="col" onclick="playerAction(this)"></div>
-            <div class="col" onclick="playerAction(this)"></div>
-            <div class="col" onclick="playerAction(this)"></div>
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col"></div>
         </div>
         <div class="row">
-            <div class="col" onclick="playerAction(this)"></div>
-            <div class="col" onclick="playerAction(this)"></div>
-            <div class="col" onclick="playerAction(this)"></div>
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col"></div>
         </div>
         <div class="row">
-            <div class="col" onclick="playerAction(this)"></div>
-            <div class="col" onclick="playerAction(this)"></div>
-            <div class="col" onclick="playerAction(this)"></div>
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col"></div>
         </div>
     </div>
 </body>
