--- a/tictac.html
+++ b/tictac.html
@@ -7,25 +7,17 @@
     <title>tictactoegame X-O</title>
     <link rel="stylesheet" href="tictac.css">
 </head>
-
 <body>
-
-    <div class="gameboard">
-        <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-        </div>
-        <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-        </div>
-        <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-        </div>
+    <div class="game">
+        <div data-index="0"></div>
+        <div data-index="1"></div>
+        <div data-index="2"></div>
+        <div data-index="3"></div>
+        <div data-index="4"></div>
+        <div data-index="5"></div>
+        <div data-index="6"></div>
+        <div data-index="7"></div>
+        <div data-index="8"></div>
     </div>
 </body>
 <script src="tictac.js"></script>
